--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,6 +23,12 @@
     <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name %><br>
   </div>
 
+  <div class="field">
+  <%= f.fields_for :tags, Tag.new do |tags_field| %>
+    <%= tags_field.label :name %>
+    <%= tags_field.text_field :name %>
+  <% end %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
